# simple-todo-app-fastapi-python

./: README.md  pyproject.toml
app/: crud.py  db.py  main.py  models.py
app/static/: style.css
app/templates/: index.html
