[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = "A simple Todo app using FastAPI and SQLite."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
